add ytableau, fix footskip, update sample

--- a/sample/LePtC.tex
+++ b/sample/LePtC.tex
@@ -4,7 +4,7 @@
 
 \chap{双语彩色笔记模版}
 
-作者：\href{mailto:alileptc@gmail.com}{LePtC}
+作者：\href{mailto:alileptc@gmail.com}{\LePtC}
 
 项目主页：\url{https://github.com/LePtC/LeNote }
 
@@ -367,17 +367,21 @@ a=\sqrt{a_t^2+a_n^2},\ \tan\theta=\frac{a_n}{a_t}}
 	&\eqd{\oiint_S \vec{B} \cdot\dif \vec{S}= \oint_L \vec{A} \cdot\dif \vec{l}}
 	&\verb|\oiint_S \oint_L|\\
 
-	矩阵,行列式
-	&\eq{\mat[0.8]{1&0\\0&1},\matd[0.8]{-a&b\\c&-d}}
-	&\verb|\mat{1&0\\0&1},\matd{-a&b\\c&-d}|\\
+	推导上加字
+	&\eq{\xlongequal{\text{归一}}, \xrightarrow{\times a^2}}
+	&\verb|\xlongequal{\text{}} \xrightarrow{}|\\
 
   左花括号
   &\eq{\delta _{ij} = \leftB[2]{\matn{1 &(i = j)\\ 0 &(i \ne j)}}}
   &\verb|\leftB[行数]{\matn{1 &(i = j)\\ 0 &(i \ne j)}}|\\
 
-	推导上加字
-	&\eq{\xlongequal{\text{归一}}, \xrightarrow{\times a^2}}
-	&\verb|\xlongequal{\text{}} \xrightarrow{}|\\
+  矩阵,行列式
+  &\eq{\mat[0.8]{1&0\\0&1},\matd[0.8]{-a&b\\c&-d}}
+  &\verb|\mat{1&0\\0&1},\matd{-a&b\\c&-d}|\\
+
+  杨图,杨盘
+  &\ynd[0.5]{3,1}\quad$T^{[21]}_1=$\yng{1&2\\3}
+  &\verb|\ynd{3,1},\yng{1&2\\3}|\\
 
 \end{tabular}
 
