update page number style

--- a/sample/LePtC.tex
+++ b/sample/LePtC.tex
@@ -53,9 +53,6 @@ xelatex 需要多编译几遍才能正确生成书签,
 
 \ent[editor]{编辑器}
 \href{http://tex.stackexchange.com/questions/339/latex-editors-ides }{各种编辑器的比较},
-熟悉哪个就用哪个好啦,
-初学者可以就用安装\TeX 系统时带的 TeXworks
-
 有关编辑器不同的设置方法见\href{https://github.com/LePtC/LeNote}{项目主页}的 \code{README.md}
 
 \ent[reader]{阅读器} 推荐使用
@@ -212,7 +209,7 @@ a=\sqrt{a_t^2+a_n^2},\ \tan\theta=\frac{a_n}{a_t}}
 
 \chap{表格混排}
 
-表格混排的命令为 \verb|\tabr[0.4]{很多行表格}{很多行文字}|, 实例 \eq{\downarrow}
+表格混排的命令为 \verb|\tabr[0.4]{很多行文字}{很多行表格}|, 实例 \eq{\downarrow}
 \ \\
 
 
