--- a/sample/LePtC.tex
+++ b/sample/LePtC.tex
@@ -12,7 +12,7 @@
 
 使用 \href{http://opensource.org/licenses/MIT}{MIT 开源协议}
 
-Last compiled on {\yyyymmdddate\today} at {\hhmmsstime} [UTC+8]
+\compiled
 
 
 \chap{安装}
