--- a/[fork] japanese/uta.tex
+++ b/[fork] japanese/uta.tex
@@ -1,6 +1,7 @@
 \documentclass{leptc-jp}
 
 
+
 \begin{document}
 
 \chap{君をのせて}{\ru{久石\ 譲}{ひさいし\ じょう}　\ru{井上\ 杏美}{いのうえ\ あずみ}}
@@ -33,7 +34,7 @@
 
 母さんがくれた　あの\ru{眼差し}{まなざし} \mg{\cn{目光}\com{＝目付き}}
 
-\ru{地球}{ちきゅう}は\ru{回}{まわ}る　
+\ru{地球}{ちきゅう}は\ru{回る}{まわる}　
 君を隠して
 
 輝く\ru{瞳}{ひとみ}　
@@ -52,6 +53,61 @@
 
 
 
+\chap{団子大家族}{\ru{麻枝\ 准}{まえだ\ じゅん}\com{前田純}　\ru{茶太}{ちゃた}}
+
+\ru{団子}{だんご}　団子　団子　団子　団子　団子　\ru{大家族}{だいかぞく}
+
+\mg{\cn{顽皮}}
+\ru{やんちゃ}{}な\ru{焼}{や}き団子　\ru{優しい}{やさしい}\ru{餡}{あん}団子
+\mg{１\cn{优雅}　２\cn{温和}　３\cn{慈祥}}
+\mg{\cn{豆沙}}
+
+\ru{少し}{すこし}\ru{夢見}{ゆめみ}がちな　\ru{月見団子}{つきみだんご}
+
+\ru{お澄まし}{おすまし}\ru{胡麻}{ごま}団子　\ru{四つ}{よっつ}子\ru{串}{くし}団子
+\mg{\cn{一本正经}　\cn{芝麻}}
+
+みんなみんな\ru{合わせて}{あわせる}　\ru{百人}{ひゃくにん}家族
+
+\ru{赤}{あか}ちゃん団子は何時も\ru{幸}{しあわ}せの\ru{中}{なか}で
+
+\ru{年寄り}{としより}団子は目を\ru{細めてる}{ほそめる}
+\mg{\cn{使细}：ガスの火を～}
+
+\ru{仲良し}{なかよし}団子　手を\ru{繋ぎ}{つなぎ}　\ru{大}{おお}きな\ru{丸い}{まるい}\ru{輪}{わ}になるよ
+\mg{\cn{相好}　１\cn{连接}　２\cn{追加}}
+
+\ru{町}{まち}を\ru{作り}{つくる}　\ru{団子星}{だんごほし}の\ru{上}{うえ}　みんなで\ru{笑い}{わらい}あうよ
+
+\ru{兎}{うさぎ}も\ru{空}{そら}で手をふってみてる　でっかいお\ru{月様}{つきさま}
+% 天上圆圆的月亮里 小兔子在朝着我们挥手
+
+\ru{嬉しい}{うれしい}\ru{事}{こと}　\ru{悲しい}{かなしい}事も　\ru{全部}{ぜんぶ}\ru{丸めて}{まるめる}
+\mg{１\cn{揉团}：雪を～　２\cn{笼络}：金で役人を丸め込む　３\cn{剃头}：頭を～}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+% \mg{１\cn{}：　２\cn{}：　３\cn{}：　４\cn{}：　５\cn{}：　６\cn{}：　７\cn{}：　８\cn{}：　９\cn{}：}
 
 
 \notetime
