--- a/[master] sample/LePtC.tex
+++ b/[master] sample/LePtC.tex
@@ -4,7 +4,7 @@
 
 \chap{双语彩色笔记模版}
 
-作者：\href{mailto:alileptc@gmail.com}{\LePtC}
+作者：\href{mailto:alileptc@gmail.com}{\LePtC} \com{萌狸}
 
 项目主页：\url{https://github.com/LePtC/LeNote }
 
@@ -253,12 +253,12 @@ a=\sqrt{a_t^2+a_n^2},\ \tan\theta=\frac{a_n}{a_t}}
 \end{tabular}
 }
 
-\newpage
+
 \chap{颜色}
 
 模版对以下情况做自动高亮：
 \prv{更新：绿色为注释专用, 算符改用橙色, 章节由红色改为紫色}
-\ \\
+
 
 
 
