--- a/[master] tex/latex/misc/leptc.sty
+++ b/[master] tex/latex/misc/leptc.sty
@@ -24,7 +24,8 @@
 \definecolor{g}{RGB}{42,167,56} % InDesign 绿色
 \definecolor{b}{RGB}{12,51,136} % InDesign 蓝色
 
-\definecolor{o}{RGB}{255,128,0} % 高亮橙
+% \definecolor{o}{RGB}{255,128,0} % 高亮橙
+\definecolor{o}{RGB}{255,102,51} % Matica 橙
 \definecolor{p}{RGB}{128,0,128} % 清华紫
 
 \definecolor{y}{RGB}{140,140,140} % 灰，仿铅笔
@@ -159,7 +160,7 @@
 \renewcommand{\dim}{\,{\color{o}\mathrm{dim}}\,}
 \renewcommand{\det}{\,{\color{o}\mathrm{det}}\,}
 \newcommand{\diag}[1][]{\,{\color{o}\mathrm{diag}}
-	\ifthenelse{\equal{#1}{}}{}{\mat[0.8]{#1}}\,}
+	\ifthenelse{\equal{#1}{}}{}{\mat[0.9]{#1}}\,}
 
 % \lim \sum 之类不作处理?
 % 图画符号（\prime，根号）即使是算符也不上色,因为本身不易混淆,上色很麻烦 ...
