add cover environment

--- a/[master] sample/LePtC.tex
+++ b/[master] sample/LePtC.tex
@@ -2,6 +2,21 @@
 \begin{document}
 
 
+\begin{lecover}{狸笔记}{模版使用说明}{Le}
+
+
+
+\enl{学习网站}
+
+\url{http://tex.stackexchange.com/ }
+
+\href{http://linux-wiki.cn/wiki/zh-hans/LaTeX%E4%B8%AD%E6%96%87%E6%8E%92%E7%89%88%EF%BC%88%E4%BD%BF%E7%94%A8XeTeX%EF%BC%89 }{ LaTeX中文排版（使用XeTeX）}
+
+\href{http://www.wikibooks.org }{维基 book}
+
+\end{lecover}
+
+
 \chap{双语彩色笔记模版}
 
 作者：\href{mailto:alileptc@gmail.com}{\LePtC} \com{萌狸}
@@ -10,7 +25,6 @@
 
 笔记主页：\url{http://leptc.github.io/lenote }
 
-\compiled
 
 
 \chap{安装}
@@ -134,7 +148,7 @@ Sublime:
 
 \end{tabular}
 
-
+\newpage
 \chaps{实例}
 
 
@@ -399,17 +413,8 @@ a=\sqrt{a_t^2+a_n^2},\ \tan\theta=\frac{a_n}{a_t}}
 \end{tabular}
 
 \ \\
-太多了 ... 慢慢写
+太多惹 ... 慢慢写
 
-
-
-\chap{学习网站}
-
-\url{http://tex.stackexchange.com/ }
-
-\href{http://linux-wiki.cn/wiki/zh-hans/LaTeX%E4%B8%AD%E6%96%87%E6%8E%92%E7%89%88%EF%BC%88%E4%BD%BF%E7%94%A8XeTeX%EF%BC%89 }{ LaTeX中文排版（使用XeTeX）}
-
-\href{http://www.wikibooks.org }{维基 book}
 
 
 
